@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3135 2019/07/31 15:00:16 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3136 2019/07/31 15:16:44 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5092,3 +5092,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated devel/R-IRkernel to 1.0.2 [brook 2019-07-31]
 	Updated devel/R-R6 to 2.4.0 [brook 2019-07-31]
 	Updated devel/R-Rcpp to 1.0.2 [brook 2019-07-31]
+	Updated devel/R-blob to 1.2.0 [brook 2019-07-31]
